docs/apache-airflow-providers-apache-drill/2.8.1/_sources/_api/airflow/providers/apache/drill/hooks/drill/index.rst.txt
:py:mod:`airflow.providers.apache.drill.hooks.drill`
====================================================

.. py:module:: airflow.providers.apache.drill.hooks.drill


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.apache.drill.hooks.drill.DrillHook




.. py:class:: DrillHook(*args, schema = None, log_sql = True, **kwargs)


   Bases: :py:obj:`airflow.providers.common.sql.hooks.sql.DbApiHook`

   Interact with Apache Drill via sqlalchemy-drill.

   You can specify the SQLAlchemy dialect and driver that sqlalchemy-drill
   will employ to communicate with Drill in the extras field of your
   connection, e.g. ``{"dialect_driver": "drill+sadrill"}`` for communication
   over Drill's REST API.  See the sqlalchemy-drill documentation for
   descriptions of the supported dialects and drivers.

   You can specify the default storage_plugin for the sqlalchemy-drill
   connection using the extras field e.g. ``{"storage_plugin": "dfs"}``.

   .. py:attribute:: conn_name_attr
      :value: 'drill_conn_id'

      

   .. py:attribute:: default_conn_name
      :value: 'drill_default'

      

   .. py:attribute:: conn_type
      :value: 'drill'

      

   .. py:attribute:: hook_name
      :value: 'Drill'

      

   .. py:attribute:: supports_autocommit
      :value: False

      

   .. py:method:: get_conn()

      Establish a connection to Drillbit.


   .. py:method:: get_uri()

      Return the connection URI.

      e.g: ``drill://localhost:8047/dfs``


   .. py:method:: set_autocommit(conn, autocommit)
      :abstractmethod:

      Set the autocommit flag on the connection.


   .. py:method:: insert_rows(table, rows, target_fields = None, commit_every = 1000, replace = False, **kwargs)
      :abstractmethod:

      Insert a collection of tuples into a table.

      Rows are inserted in chunks, each chunk (of size ``commit_every``) is
      done in a new transaction.

      :param table: Name of the target table
      :param rows: The rows to insert into the table
      :param target_fields: The names of the columns to fill in the table
      :param commit_every: The maximum number of rows to insert in one
          transaction. Set to 0 to insert all rows in one transaction.
      :param replace: Whether to replace instead of insert
      :param executemany: If True, all rows are inserted at once in
          chunks defined by the commit_every parameter. This only works if all rows
          have same number of column names, but leads to better performance.
      :param fast_executemany: If True, the `fast_executemany` parameter will be set on the
          cursor used by `executemany` which leads to better performance, if supported by driver.
      :param autocommit: What to set the connection's autocommit setting to
          before executing the query.



